fixed on tab expander animate out behind the leftside menu

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2397,7 +2397,7 @@ div.dataTables_wrapper div.dataTables_length select.new_filter {
     }
     #melis-id-nav-bar-tabs{
         position: relative;
-        left: 0 !important;
+        left: 0;
         display: block !important;
         height: 47px;
         transition: .5s ease-in-out;
@@ -2543,6 +2543,8 @@ div.dataTables_wrapper div.dataTables_length select.new_filter {
     }
     .melis-tabnext{
         float: right;
+        right: -10px;
+        line-height: 29px;
     }
     .melis-tabprev:hover,
     .melis-tabnext:hover{
